<resources>
    <string name="app_name">HR Manager</string>
    <string name="email_addr_hint">Email Address</string>
    <string name="passwd_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="register">Register</string>
    <string name="reg_user_btn">REGISTER USER</string>
    <string name="access_tier_hint">Access Tier</string>
    <string name="id_label">ID</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="job_label">Occupation</string>
    <string name="salary_label">Salary</string>
    <string name="edit_label">Edit</string>
    <string name="logout_btn">Logout</string>
    <string name="search_btn">Search</string>
    <string name="create_employee_btn">Add Employee</string>
    <string name="edit_employee_btn">Edit Employee</string>
    <string name="sort">Sort</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="department_hint">Department</string>
    <string name="title_hint">Job Title</string>
    <string name="salary_hint">Salary ($)</string>
    <string name="enter_an_employee">Enter Employee Details</string>
    <string name="back">BACK</string>
    <string name="contact_btn">Contact</string>
    <string name="access_tier_btn">Access Tier</string>
    <string name="to_be_discussed_btn">To Be Discussed</string>
    <string name="remove_employee_btn">Remove Employee</string>
</resources>